Revision history for Perl distribution CPAN-Testers-Data-Uploads
================================================================

0.17	current
	- removed delete file test, as Win32 can't cope.

0.16	13/12/2010
	- new table 'uploads_failed' to record those distribution uploads that 
	  do not parse using CPAN::DistnameInfo.
	- now require CPAN::DistnameInfo-0.10 or above.

0.15	29/11/2010
	- fixed UpdateIndex SQL query.
	- dropped fast reindex, due to flaw in design.
	- reworked reindex to better manage reindexing by author.
	- added more command line and API options.

0.14	04/02/2010
	- fixed repository and bugtracker links in META.yml.

0.13	09/12/2009
	- added Archive::Zip as a dependency for testing.

0.12	05/11/2009
	- added fast reindex functionality
	- improved speed of index lookup
	- added more POD descriptions of methods.

0.11	02/11/2009
	- update to logging messages
	- slight change to update to avoid unnecessary SQL updates.
	- attempt to catch missing index updates when updating CPAN entries.

0.10	12/10/2009
	- added oncpan field to ixlatest to further improve table lookups.

0.09	17/08/2009
	- fixed indexing bug.

0.08	15/08/2009
	- reworked reindexing to be less dramatic.
	- added example for reindexing.

0.07	19/05/2009
	Added an index lookup table, and tables now resides within the
	cpanstats database for easier cross-table queries.

0.06	15/02/2009
	- added missing README file

0.05	15/02/2009
	- added missing DBD prerequisites.

0.04	13/02/2009
	- changed to more formal package release.

0.03	29/12/2008
	- renamed Article reference.

0.02	18/11/2008
	- added multiple backup mechanism.
	- added documentation.
	- abstracted sources into configuration file.

0.01	10/11/2008
	- initial release