@@ -23,6 +23,7 @@ requires:
   File::Slurp:                      0
   Getopt::Long:                     0
   IO::File:                         0
+  IO::AtomicFile:                   0
   Net::NNTP:                        0
 recommends:
   Test::More:                       0.70
